--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p> 
         <p>Sed ut cumque officiis aperiam iure est esse corrupti libero, quas, beatae pariatur natus dignissimos maiores voluptas doloremque praesentium! Magnam, ut dolores.</p>
         <p>Dolor alias nihil asperiores vel ipsam quia est iure in recusandae quod. Beatae eveniet autem distinctio, dignissimos quibusdam accusamus pariatur enim, blanditiis quas, nostrum soluta! Voluptates est minus accusantium accusamus.</p>
+    <img src="https://media.tenor.com/4mMlEGZactgAAAAC/adventure-time-jake.gif" alt="Jake" width="30%">
 </body>
 </html>
